--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.4",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
